--- a/test_ga2_1.html
+++ b/test_ga2_1.html
@@ -249,6 +249,16 @@ function w3_close() {
   document.getElementById("myOverlay").style.display = "none";
 }
 </script>
-
+ <script>
+      /**
+      *   The following event is sent when the page loads. You could
+      *   wrap the event in a JavaScript function so the event is
+      *   sent when the user performs some action.
+      */
+      gtag('event', 'screen2_view', {
+        'app_name': 'clothing store',
+        'screen_name': 'Clothing Store:Relaxed'
+      });
+    </script> 
 </body>
 </html>
